[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/World/PowerUp.png" type="Texture" id=1]
[ext_resource path="res://Assets/World/PowerUp.gd" type="Script" id=2]
[ext_resource path="res://Assets/Effects/powerUp.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 1.33753
height = 3.9999

[sub_resource type="Animation" id=2]
resource_name = "Sound"
length = 0.9
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "playSound"
}, {
"args": [  ],
"method": "queue_free"
} ]
}

[node name="PowerUp" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 1.0625 )
shape = SubResource( 1 )

[node name="PowerUpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0

[node name="PowerUpAnimation" type="AnimationPlayer" parent="."]
anims/Sound = SubResource( 2 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
